examples/invalid/syntaxErr/exception/tr-catchErr.wacc
# try typo

# Output:
# #syntax_error#

# Program:

begin
    tr
        int x = 1
    catch ArithmeticException e do
        println e
   done
end